--- a/teaching.html
+++ b/teaching.html
@@ -12,7 +12,7 @@
    <header>
          <div id="logo">
         <h1>Mary Moroney</h1>
-        <h2>Ph.D. Student</h2>
+        <h2>Ph.D. Candidate</h2>
         <h2 class="cornell-link"><a href="http://linguistics.cornell.edu/">
 Linguistics Department<br>
         Cornell University</a>
