--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Linguistics Department<br>
     </header>
      <div id="wrapper">       
        <section id="image">
-<img src="picture.JPG" alt="Picture of Mary Moroney" class="profile-photo">
+<img src="picture.jpg" alt="Picture of Mary Moroney" class="profile-photo">
        </section>
 
        <section class="one">
