--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Mary Moroney</title>
     <link rel="stylesheet" href="css/normalize.css">
+		<meta name="description" content="Personal website of Mary Moroney, a PhD Candidate in the Linguistics department at Cornell University researching the syntax and semantics of understudied languages">
+	<meta name="keywords" content="mary, moroney, linguistics, cornell, princeton, syntax, semantics, language, shan, tai, thai, classifier, understudied languages, definiteness, anaphora, mass-count, relative clause, ithaca, murray, despic">		
     <link href='http://fonts.googleapis.com/css?family=Quattrocento:400,700|Gentium+Book+Basic:400,400italic,700,700italic|Sorts+Mill+Goudy:400,400italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -29,7 +31,7 @@ Linguistics Department<br>
     </header>
      <div id="wrapper">       
        <section id="image">
-<img src="picture.jpg" alt="Picture of Mary Moroney" class="profile-photo">
+<img src="picture.JPG" alt="Picture of Mary Moroney" class="profile-photo">
        </section>
 
        <section class="one">
@@ -71,7 +73,7 @@ Accepted. Updating the typology of definiteness: Evidence from bare nouns in Sha
 <p> 
 2019. Interpreting quantification within internally headed relative clauses. <i>Proceedings of Generative Linguistics in the Old World (GLOW) in Asia 12</i> </br>
 <span class="poster">
-	<a href="docs/GLOWiA2019.pdf">[preprint]</a><a href="http://sicogg.or.kr/GLOW-Asia-12-2019/proceedings/">[proceedings]</span>
+	<a href="docs/GLOWiA2019.pdf">[preprint]</a><a href="http://sicogg.or.kr/GLOW-Asia-12-2019/proceedings/">[proceedings]</a></span>
 </p>
 <p> 
 2019. Definiteness with Bare Nouns in Shan. In Sikos J., Pacuit E. (eds) <i>At the Intersection of Language, Logic, and Information. ESSLLI
