--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Linguistics Department<br>
     </header>
      <div id="wrapper">       
        <section id="image">
-<img src="picture.JPG" alt="Picture of Mary Moroney" class="profile-photo">
+<img src="20200427-profile.JPG" alt="Picture of Mary Moroney" class="profile-photo">
        </section>
 
        <section class="one">
@@ -64,16 +64,16 @@ August 6, 2020. 4pm (CT). </br>Two types of numeral classifiers: Evidence from C
 <h3 id="publications">Publications</h3>
 <ul>
 <p> 
-Accepted. Updating the typology of definiteness: Evidence from bare nouns in Shan. <i>Glossa</i> </br>
+2021. Updating the typology of definiteness: Evidence from bare nouns in Shan. <i>Glossa: a journal of general linguistics</i> 6(1): 56. 1–28.</br>
 <span class="poster">
-	<a href="docs/preprint-glossa2020.pdf">[preprint]</a></span>
+	<a href="https://www.glossa-journal.org/articles/10.5334/gjgl.1221/">[article]</a><a href="glossa21-bib.html">[bib]</a></span>
 </p>
 
 
 <p> 
 2019. Interpreting quantification within internally headed relative clauses. <i>Proceedings of Generative Linguistics in the Old World (GLOW) in Asia 12</i> </br>
 <span class="poster">
-	<a href="docs/GLOWiA2019.pdf">[preprint]</a><a href="http://sicogg.or.kr/GLOW-Asia-12-2019/proceedings/">[proceedings]</a></span>
+	<a href="docs/GLOWiA2019.pdf">[preprint]</a><a href="http://sicogg.or.kr/GLOW-Asia-12-2019/proceedings/">[proceedings]</span>
 </p>
 <p> 
 2019. Definiteness with Bare Nouns in Shan. In Sikos J., Pacuit E. (eds) <i>At the Intersection of Language, Logic, and Information. ESSLLI
