--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Mary Moroney</title>
     <link rel="stylesheet" href="css/normalize.css">
+			<meta name="description" content="Personal website of Mary Moroney, a PhD Candidate in the Linguistics department at Cornell University researching the syntax and semantics of understudied languages">
+	<meta name="keywords" content="mary, moroney, linguistics, cornell, princeton, syntax, semantics, language, shan, tai, thai, classifier, understudied languages, definiteness, anaphora, mass-count, relative clause, ithaca, murray, despic">	
     <link href='http://fonts.googleapis.com/css?family=Quattrocento:400,700|Gentium+Book+Basic:400,400italic,700,700italic|Sorts+Mill+Goudy:400,400italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -29,7 +31,7 @@ Linguistics Department<br>
     </header>
      <div id="wrapper">       
        <section id="image">
-<img src="picture.jpg" alt="Picture of Mary Moroney" class="profile-photo">
+<img src="20200427-profile.JPG" alt="Picture of Mary Moroney" class="profile-photo">
        </section>
        <section class="one">
 <h3 id="education"> Education </h3>
