--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Linguistics Department<br>
     </header>
      <div id="wrapper">       
        <section id="image">
-<img src="20200427-profile.JPG" alt="Picture of Mary Moroney" class="profile-photo">
+<img src="picture_2020.JPG" alt="Picture of Mary Moroney" class="profile-photo">
        </section>
 
        <section class="one">
