--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@ Linguistics Department<br>
     </header>
      <div id="wrapper">       
        <section id="image">
-<img src="picture_2020.jpg" alt="Picture of Mary Moroney" class="profile-photo">
+<img src="20200427-profile.jpg" alt="Picture of Mary Moroney" class="profile-photo">
        </section>
        <section class="one">
 <h3 id="education"> Education </h3>
