--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
    <header>
          <div id="logo">
         <h1>Mary Moroney</h1>
-        <h2>Ph.D. Candidate</h2>
+        <h2>Ph.D., Linguistics</h2>
         <h2 class="cornell-link"><a href="http://linguistics.cornell.edu/">
 Linguistics Department<br>
         Cornell University</a>
@@ -25,7 +25,7 @@ Linguistics Department<br>
           <li id="edu"><a href="index.html">Research</a></li>
           <li><a href="teaching.html">Teaching</a></li>
           <li><a href="about.html">About</a></li>
-		  <li><a href="docs/cv-moroney.pdf">CV</a></li>		  
+		  <li><a href="docs/cv_moroney.pdf">CV</a></li>		  
         </ul>
       </nav>
     </header>
