--- a/about.html
+++ b/about.html
@@ -35,9 +35,10 @@ Linguistics Department<br>
        </section>
        <section class="one">
 <h3 id="education"> Education </h3>
-<p class="cornell"> Ph.D. Program in Linguistics <br>
+<p class="cornell"> Ph.D. Linguistics <br>
+	Minor in Cognitive Science <br>
 <a href="http://linguistics.cornell.edu/">Cornell University</a> <br>
-2014- </p>
+August 2021 </p>
 <p class="princeton">
 B.A. Classics <br>
 Minor in Linguistics <br>
@@ -46,7 +47,6 @@ June 2013 </p>
 <h3 id="about"> About </h3>
 <p> 
 <ul  class="aboutme">
-<li>Ph.D. candidate</li>
 <li>editor for <a href="http://journals.linguisticsociety.org/proceedings/index.php/SALT/issue/view/154">Semantics and Linguistic Theory (SALT) 26</a></li>
 <li>junior editor for <a href="http://journals.linguisticsociety.org/proceedings/index.php/SALT/issue/view/132">Semantics and Linguistic Theory (SALT) 25</a></li>
 <li>2015-16 coordinator for the <a href="http://linguistics.cornell.edu/reading-groups">Semantics Reading Group</a></li>
