--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ August 6, 2020. 4pm (CT). </br>Two types of numeral classifiers: Evidence from C
 2019. Definiteness with Bare Nouns in Shan. In Sikos J., Pacuit E. (eds) <i>At the Intersection of Language, Logic, and Information. ESSLLI
 2018. Lecture Notes in Computer Science</i>, vol 11667, 108-123 Springer, Berlin, Heidelberg.</br>
 <span class="poster">
-	<a href="https://link.springer.com/chapter/10.1007%2F978-3-662-59620-3_7">[paper]</a><a href="esslli2019-bib.html">[bib]</a></span>
+	<a href="https://journals.linguisticsociety.org/proceedings/index.php/PLSA/article/view/4560/4156">[paper]</a><a href="lsa2019-bib.html">[bib]</a></span>
 </p>
 <p> 
 2019. Inconsistencies of the Consistency test. <i>Proceedings of the Linguistic Society of America.</i> 55:1-10.</br>
