--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ August 6, 2020. 4pm (CT). </br>Two types of numeral classifiers: Evidence from C
 <p> 
 2019. Interpreting quantification within internally headed relative clauses. <i>Proceedings of Generative Linguistics in the Old World (GLOW) in Asia 12</i> </br>
 <span class="poster">
-	<a href="docs/GLOWiA2019.pdf">[preprint]</a><a href="http://sicogg.or.kr/GLOW-Asia-12-2019/proceedings/">[proceedings]</span>
+	<a href="docs/GLOWiA2019.pdf">[preprint]</a><a href="http://sicogg.or.kr/GLOW-Asia-12-2019/proceedings/">[proceedings]</a></span>
 </p>
 <p> 
 2019. Definiteness with Bare Nouns in Shan. In Sikos J., Pacuit E. (eds) <i>At the Intersection of Language, Logic, and Information. ESSLLI
