--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Shan. <i>Proceedings of ESSLLI 2018 Student Session</i>, 174-186.</br>
 of 9th Conference of the Semantics of Under-Represented Languages in the Americas
 (SULA 9)</i>, 71–86.</br> With <span class="poster"><a href="http://conf.ling.cornell.edu/carolroselittle/index.html">Carol-Rose Little</a></span></br>
 <span class="poster">
-	<a href="https://www.amazon.com/SULA-Proceedings-Conference-Semantics-Under-Represented/dp/1540398536">[proceedings]</a><a href="http://conf.ling.cornell.edu/carolroselittle/SULA9LittleMoroney.pdf">[pdf]</a><a href="sula-bib.html">[bib]</a></span>
+	<a href="https://www.amazon.com/SULA-Proceedings-Conference-Semantics-Under-Represented/dp/1540398536">[proceedings]</a><a href="https://ling.auf.net/lingbuzz/006331">[pdf]</a><a href="sula-bib.html">[bib]</a></span>
 </p>
 </ul>
 </div>
