--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@ August 6, 2020. 4pm (CT). </br>Two types of numeral classifiers: Evidence from C
 <div>
 <h3 id="publications">Publications</h3>
 <ul>
+	
+<p>
+	To appear. Classifying classifiers: Evidence from Ch’ol, Shan and Chuj for two types of numeral classifiers. <i>Proceedings
+of 11th Conference of the Semantics of Under-Represented Languages in the Americas
+(SULA 11)</i>.</br> With <span class="poster"><a href="http://conf.ling.cornell.edu/carolroselittle/index.html">Carol-Rose Little</a></span> and <span class="poster"><a href="http://justinroyer.lingspace.org/">Justin Royer</a></br>
+       <span class="poster">
+	<a href="https://ling.auf.net/lingbuzz/005672">[preprint]</a></span>
+	       </p>
 <p> 
 2021. Updating the typology of definiteness: Evidence from bare nouns in Shan. <i>Glossa: a journal of general linguistics</i> 6(1): 56. 1–28.</br>
 <span class="poster">
