--- a/about.html
+++ b/about.html
@@ -44,6 +44,10 @@ B.A. Classics <br>
 Minor in Linguistics <br>
 <a href="http://www.princeton.edu/linguistics/">Princeton University</a><br>
 June 2013 </p>
+<h3 id="education"> Employment </h3>
+<p class="cornell"> Adjunct Instructor <br>
+	University of Rochester <br>
+	       January 2022-- </p>
 <h3 id="about"> About </h3>
 <p> 
 <ul  class="aboutme">
