--- a/teaching.html
+++ b/teaching.html
@@ -31,13 +31,21 @@ Linguistics Department<br>
      <div id="wrapper">       
              <section>
 <h3 id="education"> Teaching </h3>
+		     <h2>University of Rochester</h2>
+	<p class ="first"> 
+	     Intro to Linguistic Analysis (Spring 2022)</br>
+	     Formal Semantics (Spring 2022)</br></p>
+		     <h2>Cornell University</h2>
+		<p class ="first"> 
+  Writing Seminar: Creating the Science of Language (Fall 2015, Spring 2017</br> </p>
+			     <h2>Cornell University (Teaching assistant)</h2>
 <p class ="first"> 
-	Spring 2017: Ling 1100-103 -  Freshman Writing Seminar: Creating the Science of Language (Instructor) </br>
-	Fall 2016: LING 3303- Introduction to Syntax and Semantics (Teaching Assistant) </br>
-	Spring 2016: LING 4423 - Morphology (Teaching Assistant) </br>
-	Fall 2015: Ling 1100-107 -  Freshman Writing Seminar: Creating the Science of Language (Instructor)
-
-</p></section>
+  Introduction to Cognitive Science (Spring 2021)</br> 
+Intimate Relationships: Liking, Loving, and Interpersonal Attraction (Fall 2020)</br>
+Introduction to Syntax and Semantics (Fall 2016)</br>
+Morphology (Spring 2016)
+</p>
+</section>
       
     </div>
   </body>
