--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@ June 2013 </p>
 <h3 id="education"> Employment </h3>
 <p class="cornell"> Adjunct Instructor <br>
 	University of Rochester <br>
-	       January 2022-- </p>
+	       January 2022- </p>
 <h3 id="about"> About </h3>
 <p> 
 <ul  class="aboutme">
