--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Mary Moroney</title>
     <link rel="stylesheet" href="css/normalize.css">
-			<meta name="description" content="Personal website of Mary Moroney, a PhD Candidate in the Linguistics department at Cornell University researching the syntax and semantics of understudied languages">
+			<meta name="description" content="Personal website of Mary Moroney, a Visiting Assistant Professor in the Linguistics department at the University of Rochester researching the syntax and semantics of understudied languages">
 	<meta name="keywords" content="mary, moroney, linguistics, cornell, princeton, syntax, semantics, language, shan, tai, thai, classifier, understudied languages, definiteness, anaphora, mass-count, relative clause, ithaca, murray, despic">	
     <link href='http://fonts.googleapis.com/css?family=Quattrocento:400,700|Gentium+Book+Basic:400,400italic,700,700italic|Sorts+Mill+Goudy:400,400italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
@@ -15,9 +15,9 @@
          <div id="logo">
         <h1>Mary Moroney</h1>
         <h2>Ph.D., Linguistics</h2>
-        <h2 class="cornell-link"><a href="http://linguistics.cornell.edu/">
+        <h2 class="roc-link"><a href="https://www.sas.rochester.edu/lin/">
 Linguistics Department<br>
-        Cornell University</a>
+        University of Rochester</a>
 </h2>
            </div>
       <nav>
@@ -45,9 +45,10 @@ Minor in Linguistics <br>
 <a href="http://www.princeton.edu/linguistics/">Princeton University</a><br>
 June 2013 </p>
 <h3 id="education"> Employment </h3>
-<p class="cornell"> Adjunct Instructor <br>
-	University of Rochester <br>
-	       January 2022- </p>
+<p class="roc-link"> Visiting Assistant Professor <br>
+	<a href="https://www.sas.rochester.edu/lin/">
+        University of Rochester</a> <br>
+	       July 2022- </p>
 <h3 id="about"> About </h3>
 <p> 
 <ul  class="aboutme">
