--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@ Minor in Linguistics <br>
 <a href="http://www.princeton.edu/linguistics/">Princeton University</a><br>
 June 2013 </p>
 <h3 id="education"> Employment </h3>
-<p class="roc-link"> Visiting Assistant Professor <br>
+<p class="roc"> Visiting Assistant Professor <br>
 	<a href="https://www.sas.rochester.edu/lin/">
         University of Rochester</a> <br>
 	       July 2022- </p>
