--- a/about.html
+++ b/about.html
@@ -45,8 +45,8 @@ Minor in Linguistics <br>
 <a href="http://www.princeton.edu/linguistics/">Princeton University</a><br>
 June 2013 </p>
 <h3 id="education"> Employment </h3>
-<p> Visiting Assistant Professor <br>
-	<a class="roc" href="https://www.sas.rochester.edu/lin/">
+<p class="roc"> Visiting Assistant Professor <br>
+	<a href="https://www.sas.rochester.edu/lin/">
         University of Rochester</a> <br>
 	       2022- </p>
 <h3 id="about"> About </h3>
