--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <h1>Mary Moroney</h1>
         <h2>Ph.D., Linguistics</h2>
         <h2 class="roc-link"><a href="https://www.sas.rochester.edu/lin/">
-Linguistics Department<br>
+Visiting Assistant Professor<br>
         University of Rochester</a>
 </h2>
            </div>
