--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
          <div id="logo">
         <h1>Mary Moroney</h1>
         <h2>Ph.D., Linguistics</h2>
-        <h2 class="cornell-link"><a href="http://linguistics.cornell.edu/">
-Linguistics Department<br>
-        Cornell University</a>
+        <h2 class="roc-link"><a href="https://www.sas.rochester.edu/lin/">
+Visiting Assistant Professor<br>
+        University of Rochester</a>
 </h2>
            </div>
       <nav>
