--- a/teaching.html
+++ b/teaching.html
@@ -33,6 +33,8 @@ Visiting Assistant Professor<br>
 <h3 id="education"> Teaching </h3>
 		     <h3 id="education">University of Rochester</h3>
 	<p class ="first"> 
+		     Intro to Linguistic Analysis (Fall 2022)</br>	
+	  		      Intro to Semantic Analysis (Fall 2022)</br>	   
 	     Intro to Linguistic Analysis (Spring 2022)</br>
 	     Formal Semantics (Spring 2022)</br></p>
 		     <h3 id="education">Cornell University</h3>
