--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@ August 6, 2020. 4pm (CT). </br>Two types of numeral classifiers: Evidence from C
 <div>
 <h3 id="publications">Publications</h3>
 <ul>
+<p>
+	Accepted. Classifiers can be for numerals <i>or</i> nouns: Two strategies for numeral modification.  <i>Glossa: a journal of general linguistics</i>. </br> With <span class="poster"><a href="http://conf.ling.cornell.edu/carolroselittle/index.html">Carol-Rose Little</a></span> and <span class="poster"><a href="http://justinroyer.lingspace.org/">Justin Royer</a></br>
+       <span class="poster">
+	<a href="https://ling.auf.net/lingbuzz/006848">[preprint]</a></span>
+	       </p>
 	
 <p>
 	To appear. Classifying classifiers: Evidence from Ch’ol, Shan and Chuj for two types of numeral classifiers. <i>Proceedings
