--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ August 6, 2020. 4pm (CT). </br>Two types of numeral classifiers: Evidence from C
 <h3 id="publications">Publications</h3>
 <ul>
 <p>
-	Accepted. Classifiers can be for numerals <i>or</i> nouns: Two strategies for numeral modification.  <i>Glossa: a journal of general linguistics</i>. </br> With <span class="poster"><a href="http://conf.ling.cornell.edu/carolroselittle/index.html">Carol-Rose Little</a></span> and <span class="poster"><a href="http://justinroyer.lingspace.org/">Justin Royer</a></br>
+	Accepted. Classifiers can be for numerals <i>or</i> nouns: Two strategies for numeral modification.  <i>Glossa: A journal of general linguistics</i>. </br> With <span class="poster"><a href="http://conf.ling.cornell.edu/carolroselittle/index.html">Carol-Rose Little</a></span> and <span class="poster"><a href="http://justinroyer.lingspace.org/">Justin Royer</a></br>
        <span class="poster">
 	<a href="https://ling.auf.net/lingbuzz/006848">[preprint]</a></span>
 	       </p>
@@ -77,7 +77,7 @@ of 11th Conference of the Semantics of Under-Represented Languages in the Americ
 	<a href="https://ling.auf.net/lingbuzz/005672">[preprint]</a></span>
 	       </p>
 <p> 
-2021. Updating the typology of definiteness: Evidence from bare nouns in Shan. <i>Glossa: a journal of general linguistics</i> 6(1): 56. 1–28.</br>
+2021. Updating the typology of definiteness: Evidence from bare nouns in Shan. <i>Glossa: A journal of general linguistics</i> 6(1): 56. 1–28.</br>
 <span class="poster">
 	<a href="https://www.glossa-journal.org/articles/10.5334/gjgl.1221/">[article]</a><a href="glossa21-bib.html">[bib]</a></span>
 </p>
