--- a/index.html
+++ b/index.html
@@ -132,6 +132,27 @@ of 9th Conference of the Semantics of Under-Represented Languages in the America
 <div>
 <h3 id="presentations">Presentations</h3>
 <ul>
+
+<p> 
+January 2023. </br>Kinds of data of kinds: Restrictions on object-level interpretations.</br><i>Poster at the LSA 2023 Annual Meeting</i>
+</p>		
+<p> 
+January 7, 2022. </br>Classifier semantics in count and measure expressions.</br><i>Talk at the LSA 2022 Annual Meeting</i>
+</p>	
+<p> 
+March 4, 2022. </br>Morphological markedness and semantic interpretation in the nominal domain.</br><i>Invited talk at the University of Rochester colloquium</i>
+</p>
+<p> 
+June 1, 2021. </br>Repeater classifiers and nominal structure.</br><i>Talk at the Southeast Asian Linguistics Society (SEALS2021)</i>
+</p>
+<p> 
+April 6, 2021. </br>Two types of numeral classifiers: Evidence from Shan, Ch’ol (and Chuj).</br><i>Talk at SemanticsBabble at University of California
+San Diego (UCSD)</i>With <span class="poster"><a href="http://conf.ling.cornell.edu/carolroselittle/index.html">Carol-Rose Little</a></span> and <span class="poster"><a href="http://justinroyer.lingspace.org/">Justin Royer</a></span>
+</p>	 
+<p> 
+March 20, 2021. </br>Plural morphology in Shan: Noun, classifier, or measure term.</br><i>Talk at the 45th Penn Linguistics Conference (PLC45)</i>
+</p>
+	 
 <p> 
 August 6, 2020. 4pm (CT). </br>Two types of numeral classifiers: Evidence from Ch'ol, Shan, and Chuj.</br><i>Talk at the   Semantics of Under-Represented Languages in the Americas 
 (SULA11)</i> </br>
