--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@ August 6, 2020. 4pm (CT). </br>Two types of numeral classifiers: Evidence from C
 	       </p>
 	
 <p>
-	To appear. Classifying classifiers: Evidence from Ch’ol, Shan and Chuj for two types of numeral classifiers. <i>Proceedings
+	2022. Classifying classifiers: Evidence from Ch’ol, Shan and Chuj for two types of numeral classifiers. <i>Proceedings
 of 11th Conference of the Semantics of Under-Represented Languages in the Americas
-(SULA 11)</i>.</br> With <span class="poster"><a href="http://conf.ling.cornell.edu/carolroselittle/index.html">Carol-Rose Little</a></span> and <span class="poster"><a href="http://justinroyer.lingspace.org/">Justin Royer</a></br>
+(SULA 11)</i>, 145-160.</br> With <span class="poster"><a href="http://conf.ling.cornell.edu/carolroselittle/index.html">Carol-Rose Little</a></span> and <span class="poster"><a href="http://justinroyer.lingspace.org/">Justin Royer</a></br>
        <span class="poster">
-	<a href="https://ling.auf.net/lingbuzz/005672">[preprint]</a></span>
+	       <a href="https://ling.auf.net/lingbuzz/005672">[preprint]</a></span><span class="poster">
+	<a href="https://www.amazon.com/dp/B0BHGB5M7K?ref_=pe_3052080_397514860">[proceedings]</a></span>
 	       </p>
 <p> 
 2021. Updating the typology of definiteness: Evidence from bare nouns in Shan. <i>Glossa: A journal of general linguistics</i> 6(1): 56. 1–28.</br>
