--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <title>Mary Moroney</title>
     <link rel="stylesheet" href="css/normalize.css">
 			<meta name="description" content="Personal website of Mary Moroney, a Visiting Assistant Professor in the Linguistics department at the University of Rochester researching the syntax and semantics of understudied languages">
-	<meta name="keywords" content="mary, moroney, linguistics, cornell, princeton, syntax, semantics, language, shan, tai, thai, classifier, understudied languages, definiteness, anaphora, mass-count, relative clause, ithaca, murray, despic">	
+	<meta name="keywords" content="mary, moroney, linguistics, rochester, cornell, princeton, syntax, semantics, language, shan, tai, thai, classifier, understudied languages, definiteness, anaphora, mass-count, relative clause, ithaca, murray, despic">	
     <link href='http://fonts.googleapis.com/css?family=Quattrocento:400,700|Gentium+Book+Basic:400,400italic,700,700italic|Sorts+Mill+Goudy:400,400italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
