--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ of 11th Conference of the Semantics of Under-Represented Languages in the Americ
 	<a href="https://www.amazon.com/dp/B0BHGB5M7K?ref_=pe_3052080_397514860">[proceedings]</a></span>
 	       </p>
 <p> 
-2021. Updating the typology of definiteness: Evidence from bare nouns in Shan. <i>Glossa: A journal of general linguistics</i> 6(1): 56. 1–28.</br>
+2021. Updating the typology of definiteness: Evidence from bare nouns in Shan. <i>Glossa: A journal of general linguistics</i> 6(1), 1–28.</br>
 <span class="poster">
 	<a href="https://www.glossa-journal.org/articles/10.5334/gjgl.1221/">[article]</a><a href="glossa21-bib.html">[bib]</a></span>
 </p>
