--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ August 6, 2020. 4pm (CT). </br>Two types of numeral classifiers: Evidence from C
 <h3 id="publications">Publications</h3>
 <ul>
 <p>
-	Accepted. Classifiers can be for numerals <i>or</i> nouns: Two strategies for numeral modification.  <i>Glossa: A journal of general linguistics</i> 7(1), 1-35. </br> With <span class="poster"><a href="http://conf.ling.cornell.edu/carolroselittle/index.html">Carol-Rose Little</a></span> and <span class="poster"><a href="http://justinroyer.lingspace.org/">Justin Royer</a></br>
+	2022. Classifiers can be for numerals <i>or</i> nouns: Two strategies for numeral modification.  <i>Glossa: A journal of general linguistics</i> 7(1), 1-35. </br> With <span class="poster"><a href="http://conf.ling.cornell.edu/carolroselittle/index.html">Carol-Rose Little</a></span> and <span class="poster"><a href="http://justinroyer.lingspace.org/">Justin Royer</a></br>
        <span class="poster">
 	<a href="https://ling.auf.net/lingbuzz/006848">[preprint]</a><a href="https://doi.org/10.16995/glossa.8437">[paper]</a></span>
 	       </p>
