--- a/index.html
+++ b/index.html
@@ -133,7 +133,12 @@ of 9th Conference of the Semantics of Under-Represented Languages in the America
 <div>
 <h3 id="presentations">Presentations</h3>
 <ul>
-
+<p> 
+May 13, 2023. </br>More exceedingly comparative: Adverbial and attributive Exceed comparatives.</br><i>Poster at the SALT 33</i></br>
+<span class="poster">
+	<a href="https://saltconf.github.io/salt33/">[conference website]</a><a href="docs/salt33-poster">[poster]</a></span>
+</p>		
+<p> 
 <p> 
 January 2023. </br>Kinds of data of kinds: Restrictions on object-level interpretations.</br><i>Poster at the LSA 2023 Annual Meeting</i>
 </p>		
