--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ of 9th Conference of the Semantics of Under-Represented Languages in the America
 <p> 
 May 13, 2023. </br>More exceedingly comparative: Adverbial and attributive Exceed comparatives.</br><i>Poster at the SALT 33</i></br>
 <span class="poster">
-	<a href="https://saltconf.github.io/salt33/">[conference website]</a><a href="docs/salt33-poster">[poster]</a></span>
+	<a href="https://saltconf.github.io/salt33/">[conference website]</a><a href="docs/salt33-poster.pdf">[poster]</a></span>
 </p>		
 <p> 
 <p> 
