--- a/index.html
+++ b/index.html
@@ -39,30 +39,32 @@ Visiting Assistant Professor<br>
 <h3 id="interests">Research Projects</h3>
         <div class="rinterests">
           <li>Definiteness in article-less languages</li>
-          <li>Relative clauses</li>
+	<li>Distributivity</li>
+		<li>Relative clauses</li>
 	 <li>Quantification</li> 
 	<li>Numeral classifiers</li>
 		</div>
 </div>
 
-<!-- <div>
 <h3 id="publications">Upcoming</h3>
 <ul>
 <p> 
-August 6, 2020. 4pm (CT). </br>Two types of numeral classifiers: Evidence from Ch'ol, Shan, and Chuj.</br><i>Talk at the   Semantics of Under-Represented Languages in the Americas 
-(SULA11)</i> </br>
-	With <span class="poster"><a href="http://conf.ling.cornell.edu/carolroselittle/index.html">Carol-Rose Little</a></span> and <span class="poster"><a href="http://justinroyer.lingspace.org/">Justin Royer</a></span></br>
+September 18, 2024. </br>Question word distributivity.</br><i>Poster at Sinn und Bedeutung</i> </br>
 <span class="poster">
-	<a href="https://sites.google.com/view/sula11mexico/home">[conference website]</a><a href="https://drive.google.com/file/d/1AhL6IoDpVZwU6Qq1ppj1XsjXmBd7Gm1U/view
-">[abstract]</a><a href="https://osf.io/ph42q/">[OSF page]</a></span>
+	<a href="https://sub29.unime.it/il-convegno/">[conference website]</a><a  href="docs/SuB2024-poster.pdf">[poster]</a></span>
 </p>
 </ul>
-</div>
--->
 
 <div>
 <h3 id="publications">Publications</h3>
 <ul>
+<p> 
+2023. </br>More exceedingly comparative: Adverbial and attributive
+	Exceed comparatives.</br><i>Semantics and Linguistic Theory (SALT) 33</i>, pp. 235-25.2</br>
+<span class="poster">
+	<a href="https://doi.org/10.3765/8hsax860">[proceedings paper]</a></span>
+</p>	
+	
 <p>
 	2022. Classifiers can be for numerals <i>or</i> nouns: Two strategies for numeral modification.  <i>Glossa: A journal of general linguistics</i> 7(1), 1-35. </br> With <span class="poster"><a href="http://conf.ling.cornell.edu/carolroselittle/index.html">Carol-Rose Little</a></span> and <span class="poster"><a href="http://justinroyer.lingspace.org/">Justin Royer</a></br>
        <span class="poster">
