--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Visiting Assistant Professor<br>
 <h3 id="publications">Upcoming</h3>
 <ul>
 <p> 
-September 18, 2024. </br>Question word distributivity.</br><i>Poster at Sinn und Bedeutung</i> </br>
+September 18, 2024. </br>Question word distributivity.</br><i>Poster at Sinn und Bedeutung 29</i> </br>
 <span class="poster">
 	<a href="https://sub29.unime.it/il-convegno/">[conference website]</a><a  href="docs/SuB2024-poster.pdf">[poster]</a></span>
 </p>
@@ -59,8 +59,8 @@ September 18, 2024. </br>Question word distributivity.</br><i>Poster at Sinn und
 <h3 id="publications">Publications</h3>
 <ul>
 <p> 
-2023. </br>More exceedingly comparative: Adverbial and attributive
-	Exceed comparatives.</br><i>Semantics and Linguistic Theory (SALT) 33</i>, pp. 235-25.2</br>
+2023. More exceedingly comparative: Adverbial and attributive
+	Exceed comparatives.</br><i>Semantics and Linguistic Theory (SALT) 33</i>, pp. 235-252.</br>
 <span class="poster">
 	<a href="https://doi.org/10.3765/8hsax860">[proceedings paper]</a></span>
 </p>	
@@ -135,6 +135,12 @@ of 9th Conference of the Semantics of Under-Represented Languages in the America
 <div>
 <h3 id="presentations">Presentations</h3>
 <ul>
+	<p> 
+April 26, 2024. </br>Verb stem plurality and pluractionality in Navajo.</br><i>Talk at the WSCLA 2024</i></br>
+</i>With <span class="poster"><a href="https://www.sas.rochester.edu/lin/joycemarymcdonough/">Joyce McDonough</a></span> and <span class="poster"><a href="https://ling.unm.edu/about/people/faculty/melvatha-chee.html">Melvatha Chee</a></span></br>	
+<span class="poster">
+	<a href="https://wscla2024.ca/">[conference website]</a><a href="docs/WSCLA2024-abstract">[abstract]</a><a href="docs/WSCLA2024-poster">[poster]</a></span>
+</p>	
 <p> 
 May 13, 2023. </br>More exceedingly comparative: Adverbial and attributive Exceed comparatives.</br><i>Poster at the SALT 33</i></br>
 <span class="poster">
@@ -155,7 +161,7 @@ June 1, 2021. </br>Repeater classifiers and nominal structure.</br><i>Talk at th
 </p>
 <p> 
 April 6, 2021. </br>Two types of numeral classifiers: Evidence from Shan, Ch’ol (and Chuj).</br><i>Talk at SemanticsBabble at University of California
-San Diego (UCSD)</i>With <span class="poster"><a href="http://conf.ling.cornell.edu/carolroselittle/index.html">Carol-Rose Little</a></span> and <span class="poster"><a href="http://justinroyer.lingspace.org/">Justin Royer</a></span>
+San Diego (UCSD)</br></i>With <span class="poster"><a href="http://conf.ling.cornell.edu/carolroselittle/index.html">Carol-Rose Little</a></span> and <span class="poster"><a href="http://justinroyer.lingspace.org/">Justin Royer</a></span>
 </p>	 
 <p> 
 March 20, 2021. </br>Plural morphology in Shan: Noun, classifier, or measure term.</br><i>Talk at the 45th Penn Linguistics Conference (PLC45)</i>
