--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Visiting Assistant Professor<br>
 		</div>
 </div>
 
-<h3 id="publications">Upcoming</h3>
+<h3 id="publications">Recent</h3>
 <ul>
 <p> 
 September 18, 2024. </br>Question word distributivity.</br><i>Poster at Sinn und Bedeutung 29</i> </br>
