--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@ June 2013 </p>
         <li class="phone"><a href="tel:555-6425">555-6425</a></li>
 -->
         <li class="mail"><a href="mailto:mrm366@cornell.edu">mrm366@cornell.edu</a></li>
-        <li class="twitter"><a href="http://twitter.com/intent/tweet?/screen_name=MaryTheLinguist">@MaryTheLinguist</a></li>
+     <!--   <li class="twitter"><a href="http://twitter.com/intent/tweet?/screen_name=MaryTheLinguist">@MaryTheLinguist</a></li>-->
       </ul>
       </section>
     </div>
