--- a/index.html
+++ b/index.html
@@ -58,6 +58,19 @@ September 18, 2024. </br>Question word distributivity.</br><i>Poster at Sinn und
 <div>
 <h3 id="publications">Publications</h3>
 <ul>
+
+<p> 
+To appear. Question word distributivity.</br><i>Sinn und Bedeutung 29</i>.</br>
+<span class="poster">
+	<a href="https://lingbuzz.net/lingbuzz/009156">[preprint]</a></span>
+</p>		
+<p> 
+To appear. Verb stem plurality and pluractionality in Navajo.</br>
+With Joyce McDonough and Melvatha Chee.</br> <i>Proceedings of Worshop on Structure
+and Constituency in Languages of the Americas (WSCLA) 2024</i>.</br>
+<span class="poster">
+	<a href="docs/wscla2024-paper.pdf">[preprint]</a></span>
+</p>		
 <p> 
 2023. More exceedingly comparative: Adverbial and attributive
 	Exceed comparatives.</br><i>Semantics and Linguistic Theory (SALT) 33</i>, pp. 235-252.</br>
