--- a/teaching.html
+++ b/teaching.html
@@ -33,10 +33,11 @@ Visiting Assistant Professor<br>
 <h3 id="education"> Teaching </h3>
 		     <h3 id="education">University of Rochester</h3>
 	<p class ="first"> 
-		Fall 2024: Intro to Semantic Analysis (with J.C. Wamsley) and Morphology</br></br>
-		Nominal Semantics (Spring 2024)</br>
+		Fall 2025: Intro to Linguistic Analysis and Morphology</br></br>
+		Morphology (Fall 2024)</br>
+		     Nominal Semantics (Spring 2024)</br>
 		   Senior Seminar (Undergrad. Field Methods) (Spring 2023, Spring 2024)</br>
-		     Intro to Linguistic Analysis (Spring 2022, Fall 2022, Spring 2023, Fall 2023)</br>	
+		     Intro to Linguistic Analysis (Spring 2022, Fall 2022, Spring 2023, Fall 2023, Fall 2024)</br>	
 	  		      Intro to Semantic Analysis (Fall 2022- with Scott Grimm, Fall 2023)</br>	   
 	     Formal Semantics (Spring 2022)</br></p>
 		     <h3 id="education">Cornell University</h3>
