--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ January 10, 2026. </br>Unifying distributivity: A cross-linguistic account.
 </br>
 	<i>Talk at the 2026 Annual Linguistic Society of America (LSA) Meeting</i> </br>
 <span class="poster">
-	<a href="https://s3.amazonaws.com/amz.xcdsystem.com/16104503-B526-7178-6F9DFF4569434BDA_abstract_File2317/378_AbstractUpload_0707103406.pdf">[abstract]</a></span>
+	<a href="https://s3.amazonaws.com/amz.xcdsystem.com/16104503-B526-7178-6F9DFF4569434BDA_abstract_File2317/378_AbstractUpload_0707103406.pdf">[abstract]</a><a href="docs/LSA2026_slides-dist.pdf">[slides]</a></span>
 </p>
 	<p> 
 January 9, 2026. </br>Revisiting (in)definiteness in Hindi.</br>
