--- a/teaching.html
+++ b/teaching.html
@@ -33,12 +33,16 @@ Visiting Assistant Professor<br>
 <h3 id="education"> Teaching </h3>
 		     <h3 id="education">University of Rochester</h3>
 	<p class ="first"> 
-		Fall 2025: Intro to Linguistic Analysis and Morphology</br></br>
-		Morphology (Fall 2024)</br>
+		Current (Spring 2026): </br>
+		Intro to Pragmatics</br>
+			 Intro to Syntax</br></br>
+		Morphology (Fall 2024, Fall 2025)</br>
 		     Nominal Semantics (Spring 2024)</br>
 		   Senior Seminar (Undergrad. Field Methods) (Spring 2023, Spring 2024)</br>
-		     Intro to Linguistic Analysis (Spring 2022, Fall 2022, Spring 2023, Fall 2023, Fall 2024)</br>	
-	  		      Intro to Semantic Analysis (Fall 2022- with Scott Grimm, Fall 2023)</br>	   
+				 Intro to Pragmatics (Spring 2025, Spring 2026)</br>
+				 Intro to Grammatical Systems/Syntax (Spring 2025, Spring 2026)</br>
+		     Intro to Linguistic Analysis (Spring 2022, Fall 2022, Spring 2023, Fall 2023, Fall 2025)</br>	
+	  		      Intro to Semantic Analysis (Fall 2022- with Scott Grimm, Fall 2023, Fall 2024)</br>	   
 	     Formal Semantics (Spring 2022)</br></p>
 		     <h3 id="education">Cornell University</h3>
 		<p class ="first"> 
@@ -55,3 +59,4 @@ Morphology (Spring 2016)
     </div>
   </body>
 </html>
+
