--- a/teaching.html
+++ b/teaching.html
@@ -23,7 +23,7 @@ Visiting Assistant Professor<br>
           <li id="edu"><a href="index.html">Research</a></li>
           <li><a href="teaching.html">Teaching</a></li>
           <li><a href="about.html">About</a></li>
-		  <li><a href="docs/cv_moroney.pdf">CV</a></li>		  
+		  <li><a href="docs/cv_moroney-2026.pdf">CV</a></li>		  
         </ul>
       </nav>
     </header>
@@ -59,4 +59,5 @@ Morphology (Spring 2016)
     </div>
   </body>
 </html>
+
 
