--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@ Visiting Assistant Professor<br>
           <li id="edu"><a href="index.html">Research</a></li>
           <li><a href="teaching.html">Teaching</a></li>
           <li><a href="about.html">About</a></li>
-		  <li><a href="docs/cv_moroney.pdf">CV</a></li>		  
+		  <li><a href="docs/cv_moroney-2026.pdf">CV</a></li>		  
         </ul>
       </nav>
     </header>
@@ -72,3 +72,4 @@ June 2013 </p>
     </div>
   </body>
 </html>
+
